--- a/Assets/css/movie.css
+++ b/Assets/css/movie.css
@@ -106,7 +106,6 @@ article h1{
 article img{
     border-radius: 1em;
     display: flex;
-    justify-self: center;
 }
 
 
@@ -200,7 +199,9 @@ footer p{
     }
 
     .filmData{
-        display: block;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 
 }
